--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".InfoActivity"/>
-        <activity android:name=".VideoActivity"/>
+        <activity android:name=".VideoActivity"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 
 </manifest>
